[project]
name = "blog-agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-groq>=1.0.0",
    "langgraph>=1.0.0",
    "langgraph-cli[inmem]>=0.4.4",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]
